Fix box top alignment

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -313,12 +313,7 @@ a, a:link, a:visited {
       left: 10px;
     }
 
-    &.week1 {
-      top: 0;
-      left: 10px;
-    }
-
-    &.week2 {
+    &.jaimee {
       top: 0;
       left: 330px;
     }
